@@ -1,3 +1,10 @@
+2007-11-06  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs:
+	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
+	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
+	Track API: implement ITextEditorExtension.TextChanged.
+
 2007-10-30  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Fix "Bug 338018 - 
